testados e corrigidos endpoints endpoints do garçom e endpoints de pedidos e mesas referentes ao trabalho do garçom.